Update project plugins and dependencies